# alpha-centauri-bot

./: .replit  README.md  alpha_centuari.py  keep_alive.py  pyproject.toml  requirements.txt
